--- a/build.gradle
+++ b/build.gradle
@@ -7,14 +7,15 @@ repositories {
     mavenCentral()
 }
 
-def allureVersion = "2.14.0",
-    selenideVersion = "5.24.0",
+def allureVersion = "2.15.0",
+    selenideVersion = "5.24.2",
     junitVersion = "5.8.1"
 
 allure {
     version = allureVersion
     autoconfigure = true
     aspectjweaver = true
+    aspectjVersion = "1.9.6"
     configuration = "testImplementation"
     useJUnit5 {
         version = allureVersion
@@ -33,9 +34,14 @@ dependencies {
             "org.junit.jupiter:junit-jupiter-engine:$junitVersion")
 }
 
-tasks.withType(JavaCompile) {
+compileTestJava {
     options.encoding = 'UTF-8'
 }
+
+compileJava {
+    options.encoding = 'UTF-8'
+}
+
 
 tasks.withType(Test) {
     useJUnitPlatform()
